# ContentOrganizer

./: README.md  initialize.py  main.py  output_filter.py  process_image_files.py  pyproject.toml  setup.py
src/contentorganizer/: data_processing.py  image_data_processing.py  initialize.py  main.py
